# papra-vlm-ocr-adapter

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker-publish.yml
src/: main.rs
