[package]
name = "papra-vlm-ocr-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
exr = "1.74.2"
image = "0.25.10"
pdfium-render = "0.9.2"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
